syntax = "proto3";

package api.demo.v1;

// this is demo message 1
//
// some json example:
// ```json
// [
//     "element1",
//     "element2"
// ]
message DemoMessage1 {
  string field1 = 1;

  string field2 = 2;
}

// this is demo message 2
//
// some json example:
// ```json
// {
//     "key1": "value1",
//     "key2": "value2"
// }
message DemoMessage2 {
  string field1 = 1;

  string field2 = 2;
}
